# vega-prover

./: Cargo.toml  README.md
.github/workflows/: mdbook.yml  rust.yml
benches/: sha256_neutronnova.rs  sha256_vega_mc_zkp.rs  sha256_vega_sc.rs
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/appendix/: bibliography.md  folding-primer.md  glossary.md  mle-primer.md  pcs-primer.md  sumcheck-primer.md
book/src/building-blocks/: encodings.md  fields-and-groups.md  in-circuit-verifier.md  multilinear.md  neutronnova.md  nova-zk.md  pcs.md  r1cs.md  relaxed-spartan.md  spartan.md  sumcheck.md  transcript.md
book/src/mc/: overview.md  prep.md  prove.md  setup.md  verify.md  zero-knowledge.md
book/src/overview/: architecture.md  design-goals.md  lifecycle.md  notation.md
book/src/spec/: proof-object.md  reference-prover.md  scope.md  serialization.md  test-vectors.md  transcript-schedule.md  verifier-key.md
examples/: neutronnova_nifs_trace.rs
reference/: .gitignore  README.md
reference/fixtures/: transcript_vector.json
reference/pyvega/: __init__.py  app_circuit.py  codec.py  commitment.py  curve.py  field.py  hash_to_curve.py  hyrax.py  instance.py  mathutil.py  nifs.py  params.py  polys.py  proof.py  prover.py  prover_commit.py  prover_finish.py  prover_polys.py  prover_serialize.py  setup.py  spartan.py  sumcheck.py  transcript.py  verifier_circuit.py  verify.py  vk.py
reference/tests/: test_proof_parse.py  test_prove_finish.py  test_prover_core.py  test_prover_foundations.py  test_standalone.py  test_transcript.py  test_verify.py  test_vk_digest.py
src/: digest.rs  errors.rs  lib.rs  macros.rs  math.rs  neutronnova_zk.rs  nifs.rs  small_neutronnova.rs  small_neutronnova_workspace.rs  small_neutronnova_zk.rs  small_sumcheck.rs  spartan_relaxed.rs  spartan_zk.rs  sumcheck.rs  vega_mc_zkp.rs  vega_sc.rs  vega_sc_zkp.rs  zk.rs
src/bellpepper/: mod.rs  r1cs.rs  shape_cs.rs  solver.rs  test_r1cs.rs  test_shape_cs.rs
src/big_num/: delayed_reduction.rs  mod.rs  small_value_conversion.rs  wide_mul.rs
src/gadgets/: addmany.rs  mod.rs  small_boolean.rs  small_multi_eq.rs  small_sha256.rs  small_uint32.rs
src/lagrange_accumulator/: accumulator.rs  accumulator_builder.rs  basis.rs  domain.rs  extension.rs  extension_bound.rs  index.rs  mod.rs  thread_state.rs
src/polys/: eq.rs  mod.rs  multilinear.rs  outer_mles.rs  power.rs  univariate.rs
src/provider/: bn254.rs  keccak.rs  mod.rs  msm.rs  pasta.rs  pt256.rs  traits.rs
src/provider/pcs/: hyrax_pc.rs  ipa.rs  mod.rs
src/r1cs/: folds.rs  mod.rs  sparse.rs
src/sha256_circuits/: mod.rs  small.rs  small_chain.rs
src/small_constraint_system/: bridge.rs  mod.rs
src/traits/: circuit.rs  mod.rs  pcs.rs  snark.rs  transcript.rs
tests/: reference_conformance.rs
vega-core/: Cargo.toml
vega-core/src/: lib.rs  sumcheck.rs
vega-core/src/bellpepper/: r1cs.rs  solver.rs
vega-core/src/big_num/: mod.rs  small_value.rs
vega-core/src/polys/: multilinear.rs  univariate.rs
vega-core/src/r1cs/: mod.rs
vega-neutronnova/: Cargo.toml
vega-neutronnova/benches/: sha256_neutronnova.rs
vega-neutronnova/src/: lib.rs  neutronnova_zk.rs  zk.rs  zk_sumcheck.rs
vega-spartan/: Cargo.toml
vega-spartan/benches/: sha256_spartan.rs
vega-spartan/src/: lib.rs  spartan.rs  spartan_zk.rs  zk.rs  zk_sumcheck.rs
