[workspace]
resolver = "3"
members = [
  "vega-core",
  "vega-spartan",
  "vega-neutronnova",
]

[workspace.package]
version = "0.9.0"
authors = ["Srinath Setty <srinath@microsoft.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/Microsoft/Spartan2"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]

[workspace.dependencies]
bellpepper-core = "0.4.0"
bellpepper = "0.4.0"
ff = { version = "0.13.0", features = ["derive"] }
digest = "0.10"
sha3 = "0.10"
sha2 = "0.10.7"
rayon = "1.10.0"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
rand = "0.8.4"
itertools = "0.14.0"
subtle = "2.5"
generic-array = "0.14"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
num-integer = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
flate2 = "1.0"
bitvec = "1.0"
byteorder = "1.4.3"
thiserror = "2.0.12"
group = "0.13.0"
once_cell = "1.18.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
tikv-jemallocator = "0.6.0"
halo2curves = "0.10.0"
getrandom = { version = "0.2.0", default-features = false }
criterion = "0.5"
hex = "0.4.3"
cfg-if = "1.0.0"
proptest = "1.2.0"
vega-core = { version = "0.9.0", path = "vega-core" }

[profile.release]
debug = 1
lto = "fat"
