[package]
name = "vega-prover"
version = "0.9.0"
authors = ["Srinath Setty <srinath@microsoft.com>"]
edition = "2024"
description = "Client-side ZK provers of Vega for low-latency proving over signed data"
documentation = "https://docs.rs/vega-prover"
readme = "README.md"
repository = "https://github.com/Microsoft/vega-prover"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]

[dependencies]
bellpepper-core = "0.4.0"
bellpepper = "0.4.0"
ff = { version = "0.13.0", features = ["derive"] }
digest = "0.10"
sha3 = "0.10"
sha2 = "0.10.7"
rayon = "1.10.0"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
rand = "0.8"
itertools = "0.14.0"
subtle = "2.5"
generic-array = "0.14"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
num-integer = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
flate2 = "1.0"
bitvec = "1.0"
byteorder = "1.4.3"
thiserror = "2.0.12"
group = "0.13.0"
once_cell = "1.18.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
tikv-jemallocator = { version = "0.6.0", optional = true }

# Use halo2curves ASM on x86_64 by default; disable ASM on non-x86_64
[target.'cfg(target_arch = "x86_64")'.dependencies]
halo2curves = { version = "0.10.0", features = ["std", "bits", "derive_serde", "asm"] }

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
halo2curves = { version = "0.10.0", features = ["std", "bits", "derive_serde"] }

[target.wasm32-unknown-unknown.dependencies]
# see https://github.com/rust-random/rand/pull/948
getrandom = { version = "0.2.0", default-features = false, features = ["js"] }

[dev-dependencies]
rand = "0.8.4"
criterion = "0.5"
hex = "0.4.3"
cfg-if = "1.0.0"
sha2 = "0.10.7"
proptest = "1.2.0"

[features]
default = []
jem = ["tikv-jemallocator"]

[[bench]]
name = "sha256_vega_sc"
harness = false

[[bench]]
name = "sha256_vega_mc_zkp"
harness = false

[profile.release]
debug = 1
lto = "fat"
