[package]
name = "vega-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Core proving infrastructure for Vega's split-R1CS Spartan and NeutronNova proof systems"
documentation = "https://docs.rs/vega-core"
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
bellpepper-core.workspace = true
bellpepper.workspace = true
ff.workspace = true
digest.workspace = true
sha3.workspace = true
sha2.workspace = true
rayon.workspace = true
rand_core.workspace = true
rand.workspace = true
itertools.workspace = true
subtle.workspace = true
generic-array.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
num-integer.workspace = true
serde.workspace = true
bincode.workspace = true
flate2.workspace = true
bitvec.workspace = true
byteorder.workspace = true
thiserror.workspace = true
group.workspace = true
once_cell.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tikv-jemallocator = { workspace = true, optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
halo2curves = { workspace = true, features = ["std", "bits", "derive_serde", "asm"] }

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
halo2curves = { workspace = true, features = ["std", "bits", "derive_serde"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { workspace = true, features = ["js"] }

[dev-dependencies]
rand.workspace = true
hex.workspace = true
cfg-if.workspace = true
sha2.workspace = true
proptest.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
jem = ["dep:tikv-jemallocator"]
